hw5/k8s/mnist-svc.yml
# Service for exposing the deployed app
apiVersion: v1
kind: Service
metadata:
  name: mnist-service
spec:
  selector:
    app: mnist-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
